--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -33,6 +33,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Install tfsec
+        run: |
+          curl -L -o tfsec https://github.com/tfsec/tfsec/releases/latest/download/tfsec-linux-amd64
+          chmod +x tfsec
+          sudo mv tfsec /usr/local/bin/
+
       - name: Run tfsec
         run: tfsec .
 
